--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 <h1>My tasks </h1>
 <a href="index6.html">index6</a><br>
 <a href="table3.html">task7</a><br>
-
+<a href="index4.html">task1</a><br>
+<a href="project.html">task2</a><br>
+<a href="index3.html">task3</a><br>
+<a href="index2.html">task6</a><br>
+<a href="new 1">task6</a><br
 </body>
 </head>
 </html>
