--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <a href="index2.html">index2</a><br>
 <a href="index3.html">index3</a><br>
 <a href="index4.html">index4</a><br>
+<a href="index6.html">index5</a><br>
 
 </body>
 </head>
