--- a/index7.html
+++ b/index7.html
@@ -16,34 +16,43 @@ th{
 
     td{ text-align: center;
         color: black;
-        background-color: orange ;
+        background-color: pink;
     }
     th{color: red;
-       background-color: blue;}
+       background-color: grey;}
      p ,b, centre {
            color:purple;
-           background-color:pink;}
+           background-color:white;}
 		   
+
+</style>
+</head>
+<body>
 <table>
-  <thead>
-    <tr>
+
+<p><b><center>
+   STUDENT LIST
+</center></b></p>
+
+<tr>
       <th rowspan="2">Name</th>
       <th rowspan="2">Registration No.</th>
       <th colspan="1">Academic Performance</th>
       <th rowspan="2">Taught in Last Session</th>
-    </tr>
-    <tr>
-      <th>CGPA Till Last Semester (Out of 10)</th>
-    </tr>
+</tr>
+<tr>
+    <th>CGPA Till Last Semester (Out of 10)</th>
+	 </tr>
   </thead>
   <tbody>
     <tr>
+	
       <td>alok</td>
       <td>23155135001</td>
       <td>8.5</td>
       <td>Math</td>
     </tr>
-    <tr>
+	<tr>
       <td>roshan</td>
       <td>23155135003</td>
       <td>9.2</td>
@@ -67,5 +76,6 @@ th{
       <td>7.5</td>
       <td>History</td>
     </tr>
-  </tbody>
+  </body>
 </table>
+<html>
