--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <a href="index4.html">index4</a><br>
 <a href="index6.html">index5</a><br>
 <a href="index7.html">index6</a><br>
+<a href="index8.html">index7</a><br>
 
 </body>
 </head>
