--- a/index11.html
+++ b/index11.html
@@ -1,30 +1,59 @@
-1. Create a database named "library":
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Sarkari Result </title>
+    <link rel="new 4" href="new 4">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <a href="#">Sarkari<span>Result</span></a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="https://www.sarkariresult.com/result/">Latest Results</a></li>
+                    <li><a href="https://www.sarkariresult.com/admitcard/">Admit Card</a></li>
+                    <li><a href="https://www.sarkariresult.com/latestjob/">Latest Jobs</a></li>
+                    <li><a href="https://www.sarkariresult.com/answerkey/">Answer Key</a></li>
+                    <li><a href="https://www.sarkariresult.com/syllabus/">Syllabus</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-CREATE DATABASE library;
+    <div class="container main-content">
+        <aside class="left-sidebar">
+            <div class="section">
+                <h2>Important Links</h2>
+                <ul>
+                    <li><a href="https://www.sarkariresult.com/upscall/">Link 1</a></li>
+                    <li><a href="https://www.sarkariresult.com/sscall/">Link 2</a></li>
+                    <li><a href="https://www.sarkariresult.com/railwayall/">Link 3</a></li>
+                    </ul>
+            </div>
+            <div class="section">
+                <h2>Other Links</h2>
+                <ul>
+                    <li><a href="https://www.sarkariresult.com/boardall/">Link A</a></li>
+                    <li><a href="https://www.sarkariresult.com/policeall/">Link B</a></li>
+                    </ul>
+            </div>
+        </aside>
 
+        <main class="main-area">
+            <section class="latest-results">
+                <h2>Latest Results</h2>
+                <div class="result-item">
+                    <a href="https://www.sarkariresult.com/ssc/ssc-cpo-si-2024/ ">Result Title 1</a>
+                    <span>02/09/2024</span>
+                </div>
+                </section>
 
----
-
-2. Delete the "library" database:
-
-DROP DATABASE library;
-
-
----
-
-3. Create a table named "book_records":
-
-CREATE TABLE book_records (
-    Book_Library_No INT,
-    Book_Name VARCHAR(100),
-    Author_Name VARCHAR(100),
-    Book_Edition VARCHAR(50),
-    Price DECIMAL(10, 2)
-);
-
-
----
-
-4. Delete the "book_records" table:
-
-DROP TABLE book_records;
+    <footer>
+        <div class="container">
+            <p>&copy; srishti</p>
+        </div>
+    </footer>
+</body>
+</html>
