--- a/index6.html
+++ b/index6.html
@@ -1,94 +1,128 @@
 
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sarkari Result (Static Replica)</title>
-    <link rel="stylesheet" href="style.css">
+<title> TABLE </title>
+
+<style>
+table {width:100%;
+        border-collapse:collapse;}
+		
+th{
+    text-align: middle;
+	}
+     
+	 td{ border: 2px solid orange;
+       text-align: centre;
+      }
+	  
+    td{ text-align: center;
+	    color: aqua;
+		background-color: pich orange;
+	}	  
+	th{color: blue;
+	   background-color:pink;}
+	 p ,b,centre {
+	      color:red;
+		  background-color:dark blue;}  
+		 
+</style>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="logo">
-                <img src="images/sarkariresult_logo.png" alt="Sarkari Result">
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="https://www.sarkariresult.com/latestjob/">Latest Job</a></li>
-                    <li><a href="https://www.sarkariresult.com/admitcard/">Admit Card</a></li>
-                    <li><a href="https://www.sarkariresult.com/result/">Result</a></li>
-                    <li><a href="https://www.sarkariresult.com/answerkey/">Answer Key</a></li>
-                    <li><a href="https://www.sarkariresult.com/syllabus/">Syllabus</a></li>
-                    </ul>
-            </nav>
-        </div>
-    </header>
+<table>
 
-    <div class="container main-content">
-        <aside class="left-sidebar">
-            <div class="section">
-                <h2>Latest Updates</h2>
-                <ul>
-                    <li><a href="https://www.freejobalert.com/latest-notifications/">[Date] Job Title 1</a></li>
-                    <li><a href="https://www.sarkariresult.com/admitcard/">[Date] Admit Card for Exam X</a></li>
-                    <li><a href="https://www.sarkariresult.com/">[Date] Result of Recruitment Y</a></li>
-                    </ul>
-            </div>
-            </aside>
+<p><b><center>
+ STUDENT LIST 
+</center></b></p>
 
-        <main class="main-area">
-            <section class="section">
-                <h2>Latest Jobs</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Post Name</th>
-                            <th>Department</th>
-                            <th>Last Date</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Railway RRB Assistant Loco Pilot ALP Online Form 2025</td>
-                            <td>Railway RRB Assistance</td>
-                            <td>Last Date : 11/05/2025</td>
-                        </tr>
-                        <tr>
-                            <td>Rajasthan Police Constable Online Form 2025 </td>
-                            <td>police</td>
-                            <td>Last Date : 17/05/2025</td>
-                        </tr>
-                        </tbody>
-                </table>
-            </section>
+<tr>
+<th> SL.no</th>
+<th> NAME</th>
+<th> HOMETOWN</th>
+<th> EAMIL ID</th>
+<th> contact number</th>
+</tr>
 
-            <section class="section">
-                <h2>Admit Card</h2>
-                <ul>
-                    <li><a href="https://www.sarkariresult.com/admitcard/">[02/05/2023] Admit Card for Exam P</a></li>
-                    <li><a href="https://sdmis.nios.ac.in/search/hall-ticket">[08/09/2025] Hall Ticket for Test Q</a></li>
-                    </ul>
-            </section>
+<tr>
+<td> 1</td>
+<td> Rahul</td>
+<td> hajipur</td>
+<td> rahul.12@gmail.com</td>
+<td> 8531479220</td>
+</tr>
 
-            </main>
+<tr>
+<td> 2</td>
+<td> Rakhi</td>
+<td> Patna</td>
+<td> Rakhi.12@gmail.com</td>
+<td> 8525479220</td>
+</tr>
 
-        <aside class="right-sidebar">
-            <div class="section">
-                <h2>Important Links</h2>
-                <ul>
-                    <li><a href="https://www.sarkariresult.com/">Official Website</a></li>
-                    <li><a href="https://sarkarijobdesk.com/">Help Desk</a></li>
-                    </ul>
-            </div>
-            </aside>
-    </div>
+<tr>
+<td> 3</td>
+<td> Ritu</td>
+<td> Gaya</td>
+<td> ritu.12@gmail.com</td>
+<td> 7254973964</td>
+</tr>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Sarkari Result (Static Replica)</p>
-        </div>
-    </footer>
+<tr>
+<td> 4</td>
+<td> Atul</td>
+<td> Vaishali</td>
+<td> atul.12@gmail.com</td>
+<td> 8531479220</td>
+</tr>
 
+<tr>
+<td> 5</td>
+<td> sona</td>
+<td> Buxar</td>
+<td> sona.12@gmail.com</td>
+<td> 8531479220</td>
+</tr>
+
+<tr>
+<td> 6</td>
+<td> Krishna</td>
+<td> Samastipur</td>
+<td> krishna.12@gmail.com</td>
+<td> 8531479220</td>
+</tr>
+
+<tr>
+<td> 7</td>
+<td> Udit</td>
+<td> Sitamarhi</td>
+<td> udit.12@gmail.com</td>
+<td> 8531479220</td>
+</tr>
+
+<tr>
+<td> 8</td>
+<td> Narayan</td>
+<td> Hajipur</td>
+<td> Narayan.12@gmail.com</td>
+<td> 8531479220</td>
+</tr>
+
+<tr>
+<td> 9</td>
+<td>deepak</td>
+<td> Chhapra</td>
+<td> deepak.12@gmail.com</td>
+<td> 8531479220</td>
+</tr>
+
+<tr>
+<td> 10</td>
+<td> Jaspal</td>
+<td> Begusarai</td>
+<td> jaspal.12@gmail.com</td>
+<td> 8531479220</td>
+</tr>
+
+
+</table>
 </body>
 </html>
