--- a/index9.html
+++ b/index9.html
@@ -1,73 +1,70 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Form</title>
+  
+  <title>Webpage Layout</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: orange;
+    }
 
-<style>
+    .container {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 40px 20px;
+      background-color: pink;
+    }
 
-</style>
+    .box {
+      text-align: center;
+      width: 150px;
+      padding: 20px;
+      background-color: red;
+      border-radius: 10px;
+      
+    }
+
+    .box:hover {
+      transform: scale(1.05);
+    }
+
+    .box img {
+      width: 60px;
+      height: 60px;
+      margin-bottom: 15px;
+    }
+
+    .box h2 {
+      font-size: 18px;
+      color: aqua;
+    }
+  </style>
 </head>
 <body>
-<form>
-<label for="fname">First Name: </label>
-<input type="text" id="fname" name="fname">
-<br><br>
-<label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
-    </div>
-    <br>
 
-    <div>
-      <label for="mobile">Mobile No:</label>
-      <input type="tel" id="mobile" name="mobile">
+  <div class="container">
+    <div class="box">
+      <img src="Home" alt="Home">
+      <h2>Home </h2>
+	  <img src="home1.jpg" alt="Home">
     </div>
-    <br>
-
-    <div>
-      <label for="email">Email Address:</label>
-      <input type="email" id="email" name="email">
+    <div class="box">
+      <img src="about.png" alt="About">
+      <h2>About</h2>
     </div>
-    <br>
-
-    <div>
-      <label>Gender:</label><br>
-      <input type="radio" id="male" name="gender" value="male">
-      <label for="male">Male</label><br>
-      <input type="radio" id="female" name="gender" value="female">
-      <label for="female">Female</label><br>
-      <input type="radio" id="other" name="gender" value="other">
-      <label for="other">Other</label>
+    <div class="box">
+      <img src="picture.png" alt="Gallery">
+      <h2>Gallery</h2>
     </div>
-    <br>
-
-    <div>
-      <label>Education Done:</label><br>
-      <input type="checkbox" id="ssc" name="education" value="ssc">
-      <label for="ssc">SSC (10th)</label><br>
-      <input type="checkbox" id="upsc" name="education" value="upsc">
-      <label for="upsc">UPSC </label><br>
-      <input type="checkbox" id="graduation" name="education" value="graduation">
-      <label for="graduation">Graduation</label><br>
-      <input type="checkbox" id="post_graduation" name="education" value="post_graduation">
-      <label for="post_graduation">Post-Graduation</label><br>
-      <input type="checkbox" id="other_edu" name="education" value="other">
-      <label for="other_edu">Other</label>
+    <div class="box">
+      <img src="phone.png" alt="Contact">
+      <h2>Contact</h2>
     </div>
-    <br>
-
-    <div>
-      <label for="tea">Do you like tea?</label>
-      <select id="tea" name="tea">
-        <option value="yes">Yes</option>
-        <option value="no">No</option>
-      </select>
-    </div>
-    <br>
-
-    <div>
-      <input type="submit" value="Submit">
-      <input type="reset" value="Reset">
-    </div>
-  </form>
+  </div>
 
 </body>
 </html>
