--- a/index7.html
+++ b/index7.html
@@ -15,8 +15,8 @@
             text-align: center;
         }
 		td{ text-align: center;
-	    color: orange;
-		background-color: orange;
+	    color:red;
+		background-color: aqua;
 	   }
 		th{color: blue;
 	   background-color:pink;}
